# Relink

./: CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  Cross.toml  README.md  README_zh.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: benchmark.rs
ci/: run.sh
crates/mini-loader/: Cargo.toml  README.md
crates/mini-loader/src/: lib.rs  main.rs
crates/windows-elf-loader/: Cargo.toml  README.md
crates/windows-elf-loader/examples/: from_memory.rs  load.rs  relocate.rs
crates/windows-elf-loader/src/: lib.rs
docs/en/: memory-model.md
docs/zh/: memory-model.md
examples/: build_fixtures.rs  from_memory.rs  lifecycle.rs  linker_load.rs  linker_scan_first.rs  load_dylib.rs  load_exec.rs  load_hook.rs  load_object.rs  load_scan_first.rs  relocation_handler.rs  user_data.rs
examples/common/: mod.rs
examples/fixtures/: liba.rs
src/: aligned_bytes.rs  entity.rs  error.rs  hint.rs  lib.rs  linker.rs  loader.rs  logging.rs  sync.rs
src/arch/: aarch64.rs  arm.rs  loongarch64.rs  mod.rs  object.rs  riscv.rs  riscv32.rs  riscv64.rs  x86.rs  x86_64.rs
src/arch/aarch64/: lazy.rs  mod.rs  relocation.rs  tls.rs
src/arch/arm/: lazy.rs  mod.rs  relocation.rs  tls.rs
src/arch/loongarch64/: lazy.rs  mod.rs  relocation.rs  tls.rs
src/arch/riscv32/: lazy.rs  mod.rs  relocation.rs  tls.rs
src/arch/riscv64/: lazy.rs  mod.rs  object.rs  relocation.rs  tls.rs
src/arch/x86/: lazy.rs  mod.rs  relocation.rs  tls.rs
src/arch/x86_64/: lazy.rs  mod.rs  object.rs  relocation.rs  rewrite.rs  tls.rs
src/elf/: abi.rs  defs.rs  dynamic.rs  ehdr.rs  mod.rs  note.rs  phdr.rs  shdr.rs  symbol.rs  version.rs
src/elf/defs/: layout.rs  lifecycle.rs  mod.rs  raw.rs  rel.rs  types.rs
src/elf/hash/: gnu.rs  mod.rs  sysv.rs  traits.rs
src/elf/write/: mod.rs
src/elf/write/dso/: builder.rs  hash.rs  layout.rs  mod.rs  string_table.rs  types.rs  writer.rs
src/image/: builder.rs  core.rs  dylib.rs  dynamic.rs  elf.rs  exec.rs  exports.rs  mod.rs  module.rs  object.rs  scanned.rs  synthetic.rs  traits.rs
src/image/common/: core.rs  dynamic.rs  mod.rs
src/image/core/: defs.rs  handle.rs  loaded.rs  mod.rs  symbol.rs
src/image/elf/: dylib.rs  dynamic.rs  exec.rs  mod.rs  object.rs
src/image/kinds/: dylib.rs  exec.rs  mod.rs  object.rs
src/input/: backend.rs  mod.rs  path.rs  traits.rs
src/lazy/: defs.rs  mod.rs  native.rs  traits.rs
src/linker/: api.rs  context.rs  driver.rs  linker.rs  materialization.rs  mod.rs  plan.rs  request.rs  resolve.rs  runtime.rs  scan.rs  session.rs  storage.rs  view.rs
src/linker/layout/: address.rs  arena.rs  derived.rs  mod.rs  pass.rs  physical.rs  plan.rs  region.rs  repair.rs  section.rs  tests.rs
src/linker/mapped/: arena.rs  mod.rs  rewrite.rs
src/linker/passes/: arena.rs  mod.rs  module.rs  section.rs
src/linker/resolver/: mod.rs  search_path.rs  traits.rs
src/linker/scan/: materialization.rs  mod.rs  plan.rs
src/linker/scan/layout/: mod.rs  (+2 more)
src/loader/: buffer.rs  builder.rs  handle.rs  load.rs  loader.rs  mod.rs  scan.rs  traits.rs
src/memory/: host.rs  mod.rs  region.rs  traits.rs
src/object/: builder.rs  exports.rs  hash.rs  layout.rs  link.rs  load.rs  mod.rs  section.rs  sections.rs  symbol.rs
src/observer/: event.rs  lifecycle.rs  mod.rs  traits.rs
src/observer/event/: activity.rs  binding.rs  debug.rs  lifecycle.rs  load.rs  mod.rs  module.rs  object.rs  relocation.rs  resolve.rs
src/os/: baremetal.rs  code.rs  defs.rs  linux_libc.rs  linux_syscall.rs  mapper.rs  memory.rs  mod.rs  traits.rs  unix.rs  windows.rs
src/os/memory/: addr.rs  host.rs  local.rs  mod.rs  region.rs  traits.rs  view.rs
src/os/platform/: baremetal.rs  linux_libc.rs  linux_syscall.rs  mod.rs  windows.rs
src/relocation/: arch.rs  core.rs  defs.rs  dynamic.rs  emu.rs  helper.rs  lazy.rs  mod.rs  relocator.rs  static.rs  tls.rs  traits.rs  utils.rs
src/relocation/support/: mod.rs  value.rs
src/runtime/: code.rs  mod.rs
src/segment/: defs.rs  layout.rs  mapping.rs  mod.rs  program.rs  relro.rs  section.rs  space.rs
src/tls/: defs.rs  manager.rs  mod.rs  relocation.rs  state.rs  traits.rs
tests/: borrowed_mapped.rs  dynamic_relocation_kinds.rs  eager_binding.rs  error_paths.rs  gen_elf.rs  lazy_binding.rs  linking.rs  object.rs  planned_load.rs  riscv64_object_link.rs  riscv64_reloc_test.rs  search_path_resolver.rs  symbol_resolution.rs  tls.rs
tests/fixtures/riscv64/: a.c
tests/riscv64/: Cargo.toml  build.rs
tests/riscv64/fixtures/: b.c  test_globals.c  test_hi_lo.c  test_main.c
tests/riscv64/fixtures/riscv64/: test_32bit.c  test_branches.c  test_call.c  test_pointers.c
tests/riscv64/tests/: riscv64_object_link.rs  riscv64_reloc_test.rs
tests/support/: dylib_relocation_checks.rs  generated_dylib.rs  host_symbols.rs  memory.rs  mod.rs  test_dylib.rs
tests/support/binding/: assertions.rs  fixture.rs  mod.rs
tools/: riscv64_reloc_test.sh
tools/gen-elf/: Cargo.toml  README.md  README_zh.md
tools/gen-elf/src/: common.rs  lib.rs  relocatable.rs
tools/gen-elf/src/arch/: aarch64.rs  arm.rs  loongarch64.rs  mod.rs  riscv32.rs  riscv64.rs  x86.rs  x86_64.rs
tools/gen-elf/src/dylib/: data.rs  dynamic.rs  layout.rs  mod.rs  reloc.rs  shdr.rs  symtab.rs  text.rs
(+7 files in other folders)
