[package]
name = "mini-loader"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "The mini-loader is capable of loading and executing ELF files, including Executable file and Position-Independent Executable file"
version = "1.2.1"
keywords = ["elf", "unix", "loader"]
categories = ["no-std", "os"]

[dependencies.cfg-if]
workspace = true

[dependencies.syscalls]
workspace = true

[dependencies.elf]
workspace = true

[dependencies.elf_loader]
workspace = true
default-features = false
features = ["use-syscall"]

[dependencies]
itoa = "1.0.17"
linked_list_allocator = { version = "0.10.5" }

[[bin]]
name = "mini-loader"
